--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -28,6 +28,7 @@
         android:gravity="center_horizontal"
         android:hint="@string/your_name"
         android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:id="@+id/edit_name"/>
 
